--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,8 @@
   "name": "prosjekt-3",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "server.ts",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
@@ -15,6 +16,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.8",
+    "@types/mongoose": "^5.7.36",
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
@@ -22,6 +25,9 @@
     "mongoose": "^5.10.8"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "@types/node": "^14.11.8",
+    "nodemon": "^2.0.4",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.3"
   }
 }
