--- a/backend/package.json
+++ b/backend/package.json
@@ -2,12 +2,12 @@
   "name": "prosjekt-3",
   "version": "1.0.0",
   "description": "",
-  "main": "server.ts",
+  "main": "../dist/server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "server": "nodemon server.js"
+    "test": "ts-node .backend/server.ts",
+    "start": "tsc && nodemon ./dist/server.js",
+    "server": "tsc && nodemon ./dist/server.js"
   },
   "repository": {
     "type": "git",
