--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,12 @@
   "main": "server.ts",
   "type": "module",
   "scripts": {
+    "client-install": "npm install --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.ts",
-    "server": "nodemon server.ts"
+    "server": "nodemon server.ts",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
