--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,10 @@
   "type": "module",
   "scripts": {
     "test": "ts-node .backend/server.ts",
-    "start": "tsc && nodemon ./dist/server.js",
-    "server": "tsc && nodemon ./dist/server.js"
+    "start": "tsc && nodemon ../dist/server.js",
+    "server": "tsc && nodemon ../dist/server.js",
+    "client": "cd .. && cd client && npm start",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
