--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/icons": "^4.9.1",
     "@types/express": "^4.17.8",
     "@types/mongoose": "^5.7.36",
     "body-parser": "^1.19.0",
