--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-scripts": "^3.4.4",
+    "react-select": "^3.1.0",
     "react-transition-group": "^4.4.1",
     "reactstrap": "^8.6.0",
     "redux": "^4.0.5",
@@ -46,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-select": "^3.0.22"
   }
 }
