--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@material-ui/icons": "^4.9.1",
     "@types/express": "^4.17.8",
     "@types/mongoose": "^5.7.36",
+    "@types/react-select": "^3.0.22",
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
