--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,15 @@
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.64",
     "@types/react": "^16.9.51",
+    "@types/react-bootstrap-range-slider": "^1.2.0",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
+    "@types/react-slider": "^1.0.0",
     "@types/reactstrap": "^8.5.1",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "react": "^16.13.1",
+    "react-bootstrap-range-slider": "^2.0.2",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-scripts": "^3.4.4",
@@ -23,6 +26,7 @@
     "reactstrap": "^8.6.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "rsuite": "^4.8.4",
     "typescript": "^3.7.5",
     "uuid": "^8.3.1"
   },
