--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.10.8",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "react-slider": "^1.0.11",
+    "rsuite": "^4.8.4"
   },
   "devDependencies": {
     "@types/node": "^14.11.8",
