--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "tsc && nodemon ./dist/server.js",
     "server": "tsc && nodemon ./dist/server.js",
     "client": "cd client && npm start",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "testing": "concurrently \"npm run dev\" \"npm run cypress:open\"",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "cypress:open": "cypress open"
   },
   "repository": {
     "type": "git",
@@ -32,6 +34,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.11.8",
+    "cypress": "^5.5.0",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
