--- a/client/package.json
+++ b/client/package.json
@@ -6,15 +6,17 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
+    "@testing-library/react-hooks": "^3.4.2",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
+    "@types/mocha": "^8.0.3",
     "@types/node": "^12.12.64",
     "@types/react": "^16.9.51",
     "@types/react-bootstrap-range-slider": "^1.2.0",
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/react-slider": "^1.0.0",
+    "@types/react-test-renderer": "^16.9.3",
     "@types/reactstrap": "^8.5.1",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
@@ -24,11 +26,13 @@
     "react-redux": "^7.2.1",
     "react-scripts": "^3.4.4",
     "react-select": "^3.1.0",
+    "react-test-renderer": "^17.0.1",
     "react-transition-group": "^4.4.1",
     "reactstrap": "^8.6.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "rsuite": "^4.8.4",
+    "ts-jest": "^26.4.3",
     "typescript": "^3.7.5",
     "uuid": "^8.3.1"
   },
@@ -55,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/react": "^9.5.0",
     "@types/react-select": "^3.0.22"
   }
 }
