--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react-hooks": "^3.4.2",
@@ -20,6 +21,7 @@
     "@types/reactstrap": "^8.5.1",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "mdbreact": "^4.27.0",
     "react": "^16.13.1",
     "react-bootstrap-range-slider": "^2.0.2",
     "react-dom": "^16.13.1",
@@ -60,6 +62,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^9.5.0",
-    "@types/react-select": "^3.0.22"
+    "@types/react-select": "^3.0.22",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
