--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/node": "^14.11.8",
     "cypress": "^5.5.0",
     "nodemon": "^2.0.6",
+    "redux-devtools-extension": "^2.13.8",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   }
